// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrImg renders correctly 1`] = `
<img
  alt="test alt"
  class="cdr-image"
  src="http://via.placeholder.com/350x150"
/>
`;

exports[`CdrImg renders crop/ratio correctly 1`] = `
<img
  alt="crop left"
  class="cdr-image"
  src="http://placehold.it/1920x1080"
/>
`;
